cell editor, renderer, pow function and ui improvements